--- a/MotionStream/app/src/main/AndroidManifest.xml
+++ b/MotionStream/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.posseggs.motionstream">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -19,5 +21,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
     </application>
 </manifest>
