--- a/MotionStream/build.gradle
+++ b/MotionStream/build.gradle
@@ -19,8 +19,14 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven { url 'https://jitpack.io' }
     }
+}
+repositories {
+    maven {
+        url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
+    }
+    maven { url 'https://www.jitpack.io' }
 }
 
 task clean(type: Delete) {
